vi 사용자들을 위해서 esc키를 누르면 자동으로 영문 상태로 전환하는 기능
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@67 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-08-07  Choe Hwanjin <krisna@kldp.org>
+	* src/handler.c: vi 사용자를 위해 esc키일때 영문 상태로 자동 전환
+
 2003-08-06  Choe Hwanjin <krisna@kldp.org>
 	* src/handler.c: CapsLock, NumLock 처리 못하는 버그 수정
 	* src/ui.c: NabiKeyboardMap.map을 free 하는 버그 수정
