gtk+-2.0 대신 2.2 체크
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@74 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-08-09  Choe Hwanjin <krisna@kldp.org>
+	* configure.in: gtk+ 2.2를 필요로 하도록 함
+
 2003-08-07  Choe Hwanjin <krisna@kldp.org>
 	* src/handler.c: vi 사용자를 위해 esc키일때 영문 상태로 자동 전환
 
