--- a/nabi/README
+++ b/nabi/README
@@ -9,3 +9,8 @@ XIM 기능도 있기 때문에 XIM으로 사용하고 싶다면
 export XMODIFIERS="@im=nabi"
 
 하시면 됩니다.
+
+------------------------
+http://nabi.kldp.net/                            - 홈페이지
+http://kldp.net/projects/nabi/                   - 프로젝트 페이지
+http://chem.skku.ac.kr/~kle/moin/nabi            - 위키위키 페이지
