--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2003-08-27  Choe Hwanjin <krisna@kldp.org>
+	* src/server.h,server.c,automata.c: dvorak 자판 지원
+
 2003-08-25  Choe Hwanjin <krisna@kldp.org>
 	* release 0.4
 	* src/ui.c,configure.in: 키보드 기본값을 DEFAULT_KEYBOARD로 사용
