--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2003-08-27  Choe Hwanjin <krisna@kldp.org>
 	* src/server.h,server.c,automata.c: dvorak 자판 지원
+	* src/server.h,server.c,nabi.h,ui.c: dvorak 설정 지원
 
 2003-08-25  Choe Hwanjin <krisna@kldp.org>
 	* release 0.4
