메뉴 아이콘 추가
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@117 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2003-08-27  Choe Hwanjin <krisna@kldp.org>
 	* src/server.h,server.c,automata.c: dvorak 자판 지원
 	* src/server.h,server.c,nabi.h,ui.c: dvorak 설정 지원
+	* src/ui.c: 메뉴 아이콘 추가
 
 2003-08-25  Choe Hwanjin <krisna@kldp.org>
 	* release 0.4
