*** empty log message ***
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@138 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-09-07  Choe Hwanjin <krisna@kldp.org>
+	* release 0.5
+
 2003-08-31  Choe Hwanjin <krisna@kldp.org>
 	* src/ui.c,main.c: system tray가 닫혀도 프로그램을 종료하지 않음
 	* src/ui.c: dvorak 자판을 위한 설정을 메뉴에 추가
