--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-08  Choe Hwanjin <krisna@kldp.org>
+	* src/ui.c,src/ic.c,src/ic.h,src/nabi.h,src/hanjatable.h,src/handler.c:
+	  한자 입력 기능 추가
+
 2003-09-07  Choe Hwanjin <krisna@kldp.org>
 	* release 0.5
 
