--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-09  Choe Hwanjin <krisna@kldp.org>
+	* src/server.h,src/server.c,src/ui.c: iconv를 이용한 charset 체크루틴 
+	  추가
+
 2003-09-08  Choe Hwanjin <krisna@kldp.org>
 	* src/ui.c,src/ic.c,src/ic.h,src/nabi.h,src/hanjatable.h,src/handler.c:
 	  한자 입력 기능 추가
