Session 에 반응하도록 코드를 추가
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@170 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-09-14  Choe Hwanjin <krisna@kldp.org>
+	* src/session.h,src/session.c: session 관련 코드 추가
+
 2003-09-10  Choe Hwanjin <krisna@kldp.org>
 	* src/handler.c: 특수키들을 포워딩 함
 	* src/automata.c: 세벌식 오토마타의 잘못된 곳 수정
