--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2003-09-17  Choe Hwanjin <krisna@kldp.org>
+	* src/ui.c: set default icon
+
 2003-09-16  Choe Hwanjin <krisna@kldp.org>
 	* release 0.6
 	* src/session.c,src/main.c,src/ui.c: session 종료시 같이 종료
