--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-09-18  Choe Hwanjin <krisna@kldp.org>
+	* src/ic.c: XIM spec에 맞게 preedit clear 한후 commit 함
+
 2003-09-17  Choe Hwanjin <krisna@kldp.org>
 	* src/ui.c: set default icon
 
