--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,6 +1,8 @@
 2003-10-08  Choe Hwanjin <krisna@kldp.org>
 	* src/automata.c: charset을 체크하는 부분을 더 추가
 	  (ㅃㅞㄹㄱ의 경우 고려), 세벌식 자판에서도 charset 체크 강화
+	* src/automata.c, src/server.h, src/server.c, src/ui.c: 각 키별로 눌린
+	  횟수를 저장해두는 기능을 추가함(about 창에서 볼수 있음)
 
 2003-10-01  Choe Hwanjin <krisna@kldp.org>
 	* src/ic.c: XIMPreeditPosition 모드의 경우에는 commit한후에 preedit
