*** empty log message ***
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@205 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-10-10  Choe Hwanjin <krisna@kldp.org>
+	* src/ic.c: qt에서 한자 변환시 안보이던 문제 해결
+
 2003-10-08  Choe Hwanjin <krisna@kldp.org>
 	* release 0.8
 
