*** empty log message ***
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@220 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-15  Choe Hwanjin <krisna@kldp.org>
+	* src/automata.c,src/handler.c,src/ic.c,src/ic.h: 한글자모 이외의
+	  글자를 처리하는 루틴을 개선
+
 2003-10-14  Choe Hwanjin <krisna@kldp.org>
 	* release 0.9
 
