--- a/README
+++ b/README
@@ -1,16 +1,16 @@
-imhangul_status_applet Àº GNOME ÆĞ³ÎÀÇ ¾ÖÇÃ¸´À¸·Î¸¸ µ¿ÀÛÇÏ±â ¶§¹®¿¡ 
-±× ¿ÜÀÇ È¯°æ¿¡¼­ »ç¿ëÇÏ±â ¾î·Á¿î Á¡ÀÌ ÀÖ½À´Ï´Ù. 
+imhangul_status_applet ì€ GNOME íŒ¨ë„ì˜ ì• í”Œë¦¿ìœ¼ë¡œë§Œ ë™ì‘í•˜ê¸° ë•Œë¬¸ì— 
+ê·¸ ì™¸ì˜ í™˜ê²½ì—ì„œ ì‚¬ìš©í•˜ê¸° ì–´ë ¤ìš´ ì ì´ ìˆìŠµë‹ˆë‹¤. 
 
-ÇÏÁö¸¸ nabi´Â system tray¿¡ µé¾î°¡´Â ÇÁ·Î±×·¥ÀÌ±â ¶§¹®¿¡ KDE¿¡¼­µµ º° ¹«¸® 
-¾øÀÌ »ç¿ëÇÏ½Ç¼ö ÀÖÀ»°Ì´Ï´Ù.
+í•˜ì§€ë§Œ nabiëŠ” system trayì— ë“¤ì–´ê°€ëŠ” í”„ë¡œê·¸ë¨ì´ê¸° ë•Œë¬¸ì— KDEì—ì„œë„ ë³„ ë¬´ë¦¬ 
+ì—†ì´ ì‚¬ìš©í•˜ì‹¤ìˆ˜ ìˆì„ê²ë‹ˆë‹¤.
 
-XIM ±â´Éµµ ÀÖ±â ¶§¹®¿¡ XIMÀ¸·Î »ç¿ëÇÏ°í ½Í´Ù¸é
+XIM ê¸°ëŠ¥ë„ ìˆê¸° ë•Œë¬¸ì— XIMìœ¼ë¡œ ì‚¬ìš©í•˜ê³  ì‹¶ë‹¤ë©´
 
 export XMODIFIERS="@im=nabi"
 
-ÇÏ½Ã¸é µË´Ï´Ù.
+í•˜ì‹œë©´ ë©ë‹ˆë‹¤.
 
 ------------------------
-http://nabi.kldp.net/                            - È¨ÆäÀÌÁö
-http://kldp.net/projects/nabi/                   - ÇÁ·ÎÁ§Æ® ÆäÀÌÁö
-http://chem.skku.ac.kr/~kle/moin/nabi            - À§Å°À§Å° ÆäÀÌÁö
+http://nabi.kldp.net/                            - í™ˆí˜ì´ì§€
+http://kldp.net/projects/nabi/                   - í”„ë¡œì íŠ¸ í˜ì´ì§€
+http://chem.skku.ac.kr/~kle/moin/nabi            - ìœ„í‚¤ìœ„í‚¤ í˜ì´ì§€
