--- a/themes/KingSejong/README
+++ b/themes/KingSejong/README
@@ -1,1 +1,1 @@
-юл ев╦╤╢б ╪╨гЖ ╫е <sinsh29a@yahoo.co.kr> ╢тюл ╨╦Ё╩аж╫е ╟мют╢о╢ы.
+Л²╢ М┘▄К╖┬К┼■ Л└╠М≤└ Л▀═ <sinsh29a@yahoo.co.kr> К▀≤Л²╢ КЁ╢К┌╢Лё╪Л▀═ Й╡┐Л·┘К▀┬К▀╓.
