텍스트 파일의 인코딩을 UTF-8 로 변환
git-svn-id: http://kldp.net/svn/nabi/trunk@228 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/themes/KingSejong/README
+++ b/nabi/themes/KingSejong/README
@@ -1,1 +1,1 @@
-юл ев╦╤╢б ╪╨гЖ ╫е <sinsh29a@yahoo.co.kr> ╢тюл ╨╦Ё╩аж╫е ╟мют╢о╢ы.
+Л²╢ М┘▄К╖┬К┼■ Л└╠М≤└ Л▀═ <sinsh29a@yahoo.co.kr> К▀≤Л²╢ КЁ╢К┌╢Лё╪Л▀═ Й╡┐Л·┘К▀┬К▀╓.
