Add new candidate window routine
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@229 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-02  Choe Hwanjin <krisna@kldp.org>
+	* src/Makefile.am, src/candidate.c, src/candidate.h,
+	  src/handler.c, src/ic.c, src/ic.h, src/ui.c:
+	  Add new candidate window routine
+
 2003-10-30  Choe Hwanjin <krisna@kldp.org>
 	* 텍스트 파일들의 인코딩을 UTF-8로 변환
 
