does not use iconv directly, instead use g_iconv
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@270 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-12-14  Choe Hwanjin <krisna@kldp.org>
+	* src/server.h,src/server.c: iconv를 직접 쓰지 않고 g_iconv를 사용
+
 2003-12-09  Choe Hwanjin  <krisna@people.kldp.org>
 	* configure.in,
 	  themes/MSWindows2000/Makefile.am,
