GtkSocket의 크기를 구해서 계산하여 icon의 크기를 24,36,48,64,128중에서 결정한다
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@274 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-12-15  Choe Hwanjin <krisna@kldp.org>
+	* src/ui.c: icon의 크기를 좀더 똑똑하게 처리
+
 2003-12-14  Choe Hwanjin <krisna@kldp.org>
 	* src/server.h,src/server.c: iconv를 직접 쓰지 않고 g_iconv를 사용
 	* icon들 업데이트 (김석진님에게 감사드립니다)
