--- a/nabi/NEWS
+++ b/nabi/NEWS
@@ -1,3 +1,16 @@
+나비 0.12
+ * 트레이 아이콘이 사라지면서 죽는 버그 수정
+ * 트레이 아이콘 크기를 좀더 똑똑하게 처리함
+ * MS Windows 2000 테마 추가
+ * XIM 관련 버그 몇가지 수정
+
+나비 0.11
+ * 메인 윈도우 제공 (시스템트레이를 제공하지 않는 곳에서도 설정가능)
+ * 세벌식에서 조합중인 글자를 제대로 표현하지 못하던 문제 수정
+ * 상태정보만 보여주기 위한 -s (--status-only) 옵션 추가
+ * 나비를 종료하면 gtk2 app가 죽던 문제 수정
+ * 간단한 몇가지 버그 수정
+
 나비 0.10
  * 한자 입력 창 개선
  * 심벌 문자 입력 기능
