문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@283 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-12-18  Choe Hwanjin <krisna@kldp.org>
+	* release 0.12
+
 2003-12-16  Choe Hwanjin <krisna@kldp.org>
 	* src/ic.c: PreeditCallback 방식의 preedit style을 Underline에서 
 	  Reverse로 바꿈
