memory leak 해결  IMdkit/i18nIc.c:_Xi18nChangeIC  IMdkit/i18nPtHdr.c:GetIMValueFromName
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@293 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-12-29  Choe Hwanjin <krisna@kldp.org>
+	* IMdkit/i18nIc.c,IMdkit/i18nPtHdr.c: 메모리 leak 문제 몇가지 해결
+
 2003-12-23  Choe Hwanjin <krisna@kldp.org>
 	* src/server.h,src/server.c,src/automata.c: backspace정보를 통계 정보
 	  구조체에 남기는 코드의 버그를 해결
