* candidate window의 메인 위젯을 GtkTable에서 GtkTreeView로 바꿈  * ic->candidate_window를 ic->candidate로 이름 바꿈
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@334 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-27  Choe Hwanjin <krisna@kldp.org>
+	* src/candidate.h src/candidate.c src/ic.c src/ic.h src/handler.c:
+	  candidate window에서 한자의 뜻을 보여주기 위해 GtkTable대신
+	  GtkTreeView를 사용함
+
 2004-01-09  Choe Hwanjin <krisna@kldp.org>
 	* src/candidate.c src/candidate.h src/ic.c src/nabi.h src/server.c
           src/server.h src/ui.c tables/Makefile.am tables/candidate/nabi.txt:
