위젯을 만들기 전에 XMODIFIERS 환경 변수를 지움. 그러지 않으면 xim의 위젯이 xim 서버 자신에게 연결하려 해서 일종의 무한 루프에 빠지게 됨
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@356 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-02-02  Choe Hwanjin <krisna@kldp.org>
+	* src/ui.c: 위젯을 만들기 전에 XMODIFIERS 환경변수를 지움
+
 2004-01-29  Choe Hwanjin <krisna@kldp.org>
 	* src/candidate.c src/nabi.h src/server.c src/server.h src/ui.c:
 	  설정값 candidate_font 추가, candidate 글자에 사용할 폰트 지정
