--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2004-02-18  Choe Hwanjin <krisna@kldp.org>
+	* GNU gettext 대신 glib gettext를 사용하도록 수정
+
 2004-02-16  Choe Hwanjin <krisna@kldp.org>
 	* src/candidate.c: 한자 선택창 페이지를 바꾸면서 화면에서 벗어나는
 	  문제를 수정 (#300256)
