--- a/nabi/po/ChangeLog
+++ b/nabi/po/ChangeLog
@@ -1,3 +1,6 @@
+2004-02-18  Choe Hwanjin <krisna@kldp.org>
+	* update from GNU gettext to glib gettext
+
 2003-07-28  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: New file, from gettext-0.12.1.
