문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@419 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-03-15  Choe Hwanjin <krisna@kldp.org>
+	* release 0.13
+
 2004-03-07  Choe Hwanjin <krisna@kldp.org>
 	* src/ui.c: about 창 모양 개선
 	* po/ko.po: 번역 업데이트
