2004-04-19  Choe Hwanjin <krisna@kldp.org> 	* src/server.c: charset 체크하면서 ko로 시작하지 않으면 워닝을 	  출력하도록 함
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@421 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-19  Choe Hwanjin <krisna@kldp.org>
+	* src/server.c: charset 체크하면서 ko로 시작하지 않으면 워닝을
+	  출력하도록 함
+
 2004-03-15  Choe Hwanjin <krisna@kldp.org>
 	* release 0.13
 
