nabi-hanja.txt 를 Unihan-4.0.1.txt 에 맞도록 이전하였습니다.
git-svn-id: http://kldp.net/svn/nabi/trunk@442 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/nabi/tables/candidate/ChangeLog
+++ b/nabi/tables/candidate/ChangeLog
@@ -1,3 +1,6 @@
+2004-05-21  Chloe Lewis <ai@kldp.org>
+	* nabi-hanja.txt: Unihan-4.0.1.txt 로 이전
+
 2004-05-16  Choe Hwanjin <krisna@kldp.org>
 	* nabi-symbol.txt, nabi.txt: http://micsland.com/phps/key.php 여기에
 	있는 표대로 심벌 문자 배치를 변경
