* ko이외에 ja_JP.UTF-8, zh_CN.UTF-8, zh_HK.UTF-8, zh_TW.UTF-8, en_US.UTF-8을  지원하도록 함
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@466 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-28  Choe Hwanjin <krisna@kldp.org>
+	* ko이외에 ja_JP.UTF-8, zh_CN.UTF-8, zh_HK.UTF-8, zh_TW.UTF-8,
+	en_US.UTF-8을 지원하도록 함
+
 2004-08-01  Choe Hwanjin <krisna@kldp.org>
 	* XIMPreeditArea 지원
 
