세벌식 옛글 자판 추가
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@487 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2004-10-05  Choe Hwanjin <krisna@kldp.org>
 	* full compose map 추가(엣글 입력에 필요함)
+	* 세벌식 옛글 자판 추가
 
 2004-10-04  Choe Hwanjin <krisna@kldp.org>
 	* compose table을 제대로 로딩하지 못하던 버그 수정
