* 한영,한자키를 사용자가 직접 선택할수 있도록 함 * key_capture_dialog_new, key_capture_dialog_get_key_text 함수를 구현함 * nabi_server_set_trigger_keys()와 nabi_server_set_candidate_keys()의 인자를   int에서 char**로 바꿈 * 메뉴에서 종료를 선택하면 session에서 자동 재실행 옵션을 꺼서 바로 종료함
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@496 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-11-21  Choe Hwanjin <krisna@kldp.org>
+	* 한영 전환키와 한자 키 설정을 보강
+
 2004-11-09  Choe Hwanjin <krisna@kldp.org>
 	* tray의 크기에 맞춰 size-allocate 시그널에서 자동으로 크기를 수정함
 	* 아이콘 크기 설정 옵션을 없앰
