--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2004-11-26  Choe Hwanjin <krisna@kldp.org>
+	* 설정창에서 한글/한자로 메뉴를 나눔
+
 2004-11-21  Choe Hwanjin <krisna@kldp.org>
 	* 한영 전환키와 한자 키 설정을 보강
 	* 옛글 compose table 추가
