번역 업데이트
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@506 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-11-26  Choe Hwanjin <krisna@kldp.org>
+	* 설정창에서 한글/한자로 메뉴를 나눔
+
 2004-11-21  Choe Hwanjin <krisna@kldp.org>
 	* 한영 전환키와 한자 키 설정을 보강
 	* 옛글 compose table 추가
