* nabi_server_write_log() 구현: 자모 빈도를 $HOME/.nabi/nabi.log에 기록  * Statistics에서 XK_space도 기록함
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@508 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-12-02  Choe Hwanjin <krisna@kldp.org>
+	* 자판에서 자모 빈도를 $HOME/.nabi/nabi.log에 기록함
+
 2004-11-26  Choe Hwanjin <krisna@kldp.org>
 	* 설정창에서 한글/한자로 메뉴를 나눔
 
